--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "startbootstrap-small-business": "^5.0.4"
   },
   "name": "unit-2-project",
   "description": "APP DESCRIPTION",
